--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
         <div class="step-form"></div>
     </div>
 
-    <script src="./bundle.js"></script>
+    <script src="bundle.js"></script>
 
     <script>
 
